--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-
-.idea
 node_modules
-app/bower_components
-app/my-aws-credentials.json
-app/facebook-app-id
-Kitten.iml
+dist
+.tmp
+.sass-cache
+bower_components
+.grunt
+env.sh
