--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
-  "version": "0.0.0",
-  "private": true,
-  "name": "AwsStarterApp",
-  "description": "AwsStarterApp",
-  "license": "MIT",
+  "name": "snac2-aws-sdk-js",
   "devDependencies": {
-    "bower": "^1.3.1",
-    "http-server": "^0.6.1",
-    "karma": "^0.12.16",
-    "karma-chrome-launcher": "^0.1.4",
-    "karma-jasmine": "^0.1.5",
-    "karma-ng-html2js-preprocessor": "^0.1.2",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "protractor": "~1.7.0",
-    "tmp": "0.0.23"
+    "apache-server-configs": "^2.7.1",
+    "grunt": "^0.4.5",
+    "grunt-autoprefixer": "^1.0.0",
+    "grunt-concurrent": "^0.5.0",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-connect": "^0.8.0",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-cssmin": "^0.10.0",
+    "grunt-contrib-htmlmin": "^0.3.0",
+    "grunt-contrib-imagemin": "^0.8.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-sass": "^0.7.3",
+    "grunt-contrib-uglify": "^0.5.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-gh-pages": "^0.9.1",
+    "grunt-mocha": "^0.4.10",
+    "grunt-modernizr": "^0.5.2",
+    "grunt-newer": "^0.7.0",
+    "grunt-rev": "^0.1.0",
+    "grunt-svgmin": "^0.4.0",
+    "grunt-usemin": "^2.3.0",
+    "grunt-wiredep": "^1.7.0",
+    "jshint-stylish": "^0.4.0",
+    "load-grunt-tasks": "^0.4.0",
+    "time-grunt": "^0.4.0"
   },
-  "scripts": {
-    "postinstall": "bower install",
-    "prestart": "npm install",
-    "start": "http-server -a 0.0.0.0 -p 8000",
-    "pretest": "npm install",
-    "test": "node node_modules/karma/bin/karma start test/karma.conf.js",
-    "test-single-run": "node node_modules/karma/bin/karma start test/karma.conf.js  --single-run",
-    "preupdate-webdriver": "npm install",
-    "update-webdriver": "webdriver-manager update",
-    "preprotractor": "npm run update-webdriver",
-    "protractor": "protractor test/protractor.conf.js"
+  "engines": {
+    "node": ">=0.10.0"
   }
 }
